fixed searchbar appearance on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,9 @@ body {
 }
 
 #search-bar-input {
-    width: 100%;
+    width: 80%;
     border-color: black;
+    margin-right: 5%;
 }
 
 #search-button {
@@ -244,7 +245,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    width: 90%;
+    width: 70%;
     height: 100px;
 }
 
@@ -311,7 +312,7 @@ body {
     position: absolute;
     margin: auto;
     top: 0;
-    right: 0;
+    right: 15px;
     bottom: 0;
     left: 0;
     width: 50px;
@@ -343,7 +344,7 @@ body {
 }
 
 .container input:focus~.search {
-    right: -100%;
+    right: -81%;
     background: var(--neon-orange);
     z-index: 6;
 }
